--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "description": "React example starter project",
-  "keywords": ["react", "starter"],
+  "keywords": [
+    "react",
+    "starter"
+  ],
   "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "5.11.10",
@@ -13,10 +16,11 @@
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-drag-and-drop": "2.4.0",
+    "react-redux": "5.0.5",
     "react-scripts": "4.0.3",
     "redux": "3.6.0",
-    "redux-chunk": "1.0.11",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "2.3.0",
     "sass": "1.32.8",
     "sass-loader": "11.0.1"
   },
@@ -28,5 +32,10 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
