add point remark function

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-drag-and-drop": "2.4.0",
+    "react-image-mapper": "0.0.15",
     "react-redux": "5.0.5",
     "react-scripts": "4.0.3",
     "redux": "3.6.0",
